# aihack_ufo

./: .gitignore  README.md  app.py  fit_predict.csv  pyproject.toml  requirements.txt  test.ipynb
data/: style.css
tests/: test_aihack_ufo.py
