[tool.poetry]
name = "aihack_ufo"
version = "0.1.0"
description = ""
authors = ["Mikhail Kostin <1bitt2@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"
Pillow = "^9.1.1"
streamlit-lottie = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
